bk_ida/gccida/c1/use_related_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/use_related_value/src/cse.c:2629:34: error: use of undeclared identifier 'machine_mode'
v5 = safe_hash( related_value, ( machine_mode)*( ( unsigned __int8 *)related_value + 2)); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/use_related_value/src/cse.c:2630:31: error: use of undeclared identifier 'machine_mode'
v2 = lookup( v4, v5 & 0x1F, ( machine_mode)*( ( unsigned __int8 *)v4 + 2)); 
                              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/use_related_value/src/obj/cse.o] Error 1
